# music-map

./: .gitignore  Readme.md  pyproject.toml
data/processed/: metadata.json
scripts/: download_data.py
src/data/: graph_builder.py  preprocessor.py
src/model/: lightgcn_plus.py  trainer.py
src/scripts/: build_initial_graph.py  combine_batches.py  create_track_mappings.py  download_data.py  drive_trainer.py  evaluate.py  make_predictions.py  read_data.py  run_preprocessing.py
src/scripts/data_inspection/: embedding_inspector.py  graph_analyser.py  parquet_insp.py  pickle_insp.py
